force-app/main/default/objects/Steps__c/Steps__c.object-meta.xml
<CustomObject>
    <label>Steps</label>
    <pluralLabel>Steps</pluralLabel>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>