force-app/main/default/objects/Steps__c/fields/Golden_Point__c.field-meta.xml
<CustomField>
    <fullName>Golden_Point__c</fullName>
    <label>Golden Point</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>