force-app/main/default/objects/Steps__c/fields/Penalty__c.field-meta.xml
<CustomField>
    <fullName>Penalty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Penalty</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>