force-app/main/default/objects/Steps__c/fields/Streak__c.field-meta.xml
<CustomField>
    <fullName>Streak__c</fullName>
    <label>Streak</label>
    <type>Number</type>
    <description>Tracks the continuous streak of steps taken</description>
    <inlineHelpText>The number of consecutive days steps have been recorded</inlineHelpText>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>