force-app/main/default/objects/Steps__c/fields/Todays_Steps__c.field-meta.xml
<CustomField>
    <fullName>Todays_Steps__c</fullName>
    <label>Today's Steps</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>