force-app/main/default/objects/Steps__c/fields/Total_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Steps__c</fullName>
    <label>Total Steps</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>