force-app/main/default/objects/Steps__c/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Golden_Point__c</columns>
    <columns>Penalty__c</columns>
    <columns>Total_Steps__c</columns>
    <columns>Todays_Steps__c</columns>
    <columns>Streak__c</columns>
    <filterScope>Mine</filterScope>
    <label>My View</label>
</ListView>